[build-system]
requires = ["setuptools_scm", "scikit-build-core", "hatchling"]
build-backend = "scikit_build_core.build"

[project]
name = "tcars"
dynamic = ["version","description"]
authors = [
    {name = "Hartwig Deneke", email = "deneke@tropos.de"},
    {name = "Jonas Witthuhn", email = "witthuhn@tropos.de"}
]
license = {text = "GNU General Public License v3 (GPLv3)"}
requires-python = ">=3.10"
dependencies = [
    "pip",
    "numpy",
    "pandas",
    "xarray",
    "cfgrib",
    "cdsapi",
    "scipy",
    "matplotlib",
    "bottleneck",
    "netcdf4",
    "jstyleson",
    "toolz",
    "addict",
    "trosat-base @ git+https://github.com/hdeneke/trosat-base.git#egg=trosat-base",
    "tqdm",
]

[project.optional-dependencies]
jupyter = ["jupyter", "ipykernel"]
docs = ["sphinx", "myst-parser", "myst-nb"]

[tool.scikit-build]
cmake.version = ">3.15"
cmake.source-dir = "external/ecrad_source"
wheel.install-dir = "tcars/ecrad"
metadata.version.provider = "scikit_build_core.metadata.setuptools_scm"
sdist.include = ["src/tcars/_version.py"]
#sdist.include = ["external/ecrad_source/VERSION"]
wheel.license-files = ["external/ecrad_source/VERSION"]

[tool.scikit-build.wheel.packages]
"tcars/ecrad/data" = "external/ecrad_source/data"
"tcars" = "src/tcars"

[tool.scikit-build.metadata.description]
provider = "scikit_build_core.metadata.regex"
input = "external/ecrad_source/VERSION"
regex = "(?P<value>.*?)"

[[tool.scikit-build.generate]]
path = "tcars/_ecrad_version.py"
template = '''
__version__ = "${description}"
'''

#[tool.scikit-build.build.hooks.custom]
#path = "generate_ecrad_version_hook.py"
#entry-point = "generate_ecrad_version_file"

[tool.setuptools_scm]
local_scheme = "dirty-tag"
write_to = "src/tcars/_version.py" 
