[build-system]
requires = ["setuptools_scm", "scikit-build-core"]
build-backend = "scikit_build_core.build"

[project]
name = "tcars"
dynamic = ["version","description"]
authors = [
    {name = "Hartwig Deneke", email = "deneke@tropos.de"},
    {name = "Jonas Witthuhn", email = "witthuhn@tropos.de"}
]
license = {text = "GNU General Public License v3 (GPLv3)"}
requires-python = ">=3.10"
dependencies = [
    "pip",
    "numpy",
    "pandas",
    "xarray",
    "cfgrib",
    "cdsapi",
    "scipy",
    "matplotlib",
    "bottleneck",
    "netcdf4",
    "jstyleson",
    "toolz",
    "addict",
    "trosat-base @ git+https://github.com/hdeneke/trosat-base.git#egg=trosat-base",
    "tqdm",
    "parse>=1.20.0",
    "f90nml",
]

[project.optional-dependencies]
jupyter = ["jupyter", "ipykernel"]
docs = ["sphinx", "myst-parser", "myst-nb"]

[project.scripts]
tcars = "tcars.click:cli_tcars"
ecrad = "tcars.click:cli_ecrad"

[tool.scikit-build]
cmake.version = ">3.15"
cmake.source-dir = "external/ecrad_source"
wheel.install-dir = "tcars/ecrad"
metadata.version.provider = "scikit_build_core.metadata.setuptools_scm"
sdist.include = ["src/tcars/_version.py"]
wheel.license-files = ["external/ecrad_source/VERSION"]

[tool.scikit-build.wheel.packages]
"tcars/ecrad/data" = "external/ecrad_source/data"
"tcars" = "src/tcars"

[tool.scikit-build.metadata.description]
provider = "scikit_build_core.metadata.regex"
input = "external/ecrad_source/VERSION"
regex = "(?P<value>\\d+\\.\\d+\\.\\d+)"

[[tool.scikit-build.generate]]
path = "tcars/ecrad/_version.py"
template = '''
__version__ = version = "${description}"
'''

[tool.setuptools_scm]
local_scheme = "dirty-tag"
write_to = "src/tcars/_version.py" 
